Descargo la biblioteca necesaria para este apartado y la añado al directorio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ add_executable(Ejercicio_4
 add_executable(Ejercicio_5
         "Ejercicio 5/main.cpp")
 add_executable(Ejercicio_6
-        "Ejercicio 6/main.cpp")
+        "Ejercicio 6/main.cpp"
+        "Ejercicio 6/lexical_cast.hpp")
